# vaudeville

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  coverage.xml  justfile  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_rule.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
agents/: hard-hook-writer.md  slm-rule-writer.md
commands/: setup.md
commands/design/: RALPH.md  read-prior-plan.sh  read-rule.sh
commands/generate/: RALPH.md  count-shadow.sh  list-rules.sh  run-eval.sh  session-analytics.sh  show-results.sh
commands/judge/: RALPH.md  last-eval-log.sh  read-judge-log.sh  read-plan.sh  read-rule.sh  read-tune-results.sh
commands/tune/: RALPH.md  read-plan.sh  run-eval.sh  show-metrics.sh
evaluation/: README.md
examples/: README.md
examples/rules/: deferral-detector.yaml  dismissal-detector.yaml  fake-green-detector.yaml  git-gate.yaml  hedging-detector.yaml  over-asking-detector.yaml  preexisting-fix-detector.yaml  sycophancy-detector.yaml  turn-waste-detector.yaml  violation-detector.yaml
examples/tests/: deferral-detector.yaml  dismissal-detector.yaml  fake-green-detector.yaml  hedging-detector.yaml  sycophancy-detector.yaml  violation-detector.yaml
hooks/: hooks.json  pr_reply_guard.py  runner.py  session-start.sh  stop_guard.py
ralphs/age-fixes/: TODO.md
ralphs/kv-cache/: TODO.md
ralphs/observability/: check-progress.sh
ralphs/tuning-harness/: TODO.md
rules/: deferral-detector.yaml  dismissal-detector.yaml  unresolved-failures-detector.yaml  violation-detector.yaml
scripts/: claude-oauth-keyhelper.sh  gguf-preflight.sh  setup.sh
skills/add-hook/: SKILL.md
skills/add-rule/: SKILL.md
skills/hook-creator/: SKILL.md
skills/hook-suggester/: SKILL.md
skills/rule-admin/: SKILL.md
skills/rule-audit/: SKILL.md
skills/session-analytics/: SKILL.md
skills/status/: SKILL.md
skills/tier-advisor/: SKILL.md
skills/tune/: SKILL.md
tests/: conftest.py  deferral-detector.yaml  dismissal-detector.yaml  fake-green-detector.yaml  over-asking-detector.yaml  preexisting-deflection-detector.yaml  preexisting-fix-detector.yaml  sycophancy-detector.yaml  test_abandon_rule.py  test_adversarial.py  test_analytics.py  test_analyze.py  test_analyze_main.py  test_backends.py  test_cli.py  test_cli_rewire.py  test_cli_rule_admin.py  test_cli_stats.py  test_condense.py  test_core.py  test_core_rules.py  test_daemon.py  test_daemon_backend.py  test_default_prompt.py  test_eval.py  test_eval_main.py  test_event_log.py  test_examples.py  test_gguf_backend.py  test_gguf_preflight.py  test_log_config.py  test_mlx_backend.py  test_orchestrate_generate.py  test_orchestrate_tune.py  test_orchestrator.py  test_orchestrator_adversarial.py  test_parse_judge_signal.py  test_phase_promise.py  test_prompt_tuning.py  test_query_helpers.py  (+24 more)
tests/fixtures/: stop-hook-input.json
vaudeville/: __main__.py  _stats_rendering.py  cli_rules.py  eval.py  eval_calibrate.py  eval_cli.py  eval_report.py  orchestrator.py  orchestrator_tui.py  setup.py  tui.py
vaudeville/analytics/: __init__.py  _ingest.py
vaudeville/core/: __init__.py  client.py  examples.py  paths.py  protocol.py  rules.py  truncation.py
vaudeville/orchestrator/: __init__.py  _abandon.py  _default_prompt.py  _generate.py  _phase.py  _tune.py
vaudeville/server/: __init__.py  __main__.py  _handlers.py  condense.py  daemon.py  daemon_backend.py  event_log.py  gguf_backend.py  inference.py  log_config.py  mlx_backend.py  mlx_logprobs.py  stats.py  tui.py  watch.py
vaudeville/tune/: __init__.py  cli.py  harness.py  pool.py  (+3 more)
(+15 files in other folders)
