[project]
name = "vaudeville"
version = "0.1.0"
description = "SLM-powered semantic hook enforcement for Claude Code"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Paul Sorensen" },
]
keywords = ["claude-code", "hooks", "llm", "phi-4", "slm", "ai-safety", "quality-enforcement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "argcomplete>=3.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.1",
    "rich>=13.0",
]

[project.scripts]
vaudeville = "vaudeville.__main__:main"

[project.urls]
Repository = "https://github.com/paulnsorensen/vaudeville"
Changelog = "https://github.com/paulnsorensen/vaudeville/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/paulnsorensen/vaudeville/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vaudeville"]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["vaudeville"]
omit = [
    "vaudeville/server/mlx_backend.py",
    "vaudeville/server/gguf_backend.py",
    "vaudeville/setup.py",
    "vaudeville/server/__main__.py",
]

[dependency-groups]
dev = [
    "diff-cover>=9.6.0",
    "mypy>=1.19.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
    "types-pyyaml>=6.0.12.20250915",
]
mlx = [
    "mlx-lm>=0.31.0",
]
gguf = [
    "llama-cpp-python>=0.3.4",
    "huggingface-hub>=0.24.0",
]
